--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -28,8 +28,11 @@
                 </li>
             </ul> -->
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="{% url 'registration_register' %}">Sign Up</a></li>
-                <li><a href="{% url 'auth_login' %}">Log In</a></li>
+                {% if user.is_authenticated %}
+                    <li><a href="{% url 'auth_logout' %}?next=/"> Logout</a></li>
+                {% else %}
+                    <li><a href="{% url 'auth_login' %}">Log In</a></li>
+                {% endif %}
                 <li><a href="{% url 'registration_register' %}">Register as a beautician</a></li>
             </ul>
         </div>
