--- a/app/templates/registration/login.html
+++ b/app/templates/registration/login.html
@@ -10,19 +10,20 @@
 	{% include "navbar.html" %}
 
 	<div class="container">
-		<form class="form-signin" method="post" action=".">
+		<form class="form-signin" method="post">
 			{% csrf_token %}
 			<h2 class="form-signin-heading">Sign in</h2>
-			<label for="inputEmail" class="sr-only">Email address</label>
-			<input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">
+			<label for="inputEmail" class="sr-only">Username</label>
+			 <input type="text" class="form-control" name="username" placeholder="Username" required="" autofocus="" />
 			<label for="inputPassword" class="sr-only">Password</label>
-			<input type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
+			 <input type="password" class="form-control" name="password" placeholder="Password" required=""/>
 			<div class="checkbox">
 				<label>
 					<input type="checkbox" value="remember-me"> Remember me
 				</label>
 			</div>
 			<button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+			<input type="hidden" name="next" value="{{ next }}" />
 			<p id="forgot-password" ><a href="{% url 'auth_password_reset' %}">Forgot password?</a></p>
 			<p>Not a member? <a href="{% url 'registration_register' %}">Register</a></p>
 		</form>
