updating registration form and begin integrating full calendar

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -3,5 +3,22 @@
 {% block content %}
 
 {% include "navbar.html" %}
-<h1>Homepage</h1>
+
+<div id="calendar"></div>
+<script type='text/javascript'>
+$(document).ready(function() {
+
+    // page is now ready, initialize the calendar...
+    $('#calendar').fullCalendar({
+        // put your options and callbacks here
+      events: '/schedule/api/occurrences?calendar_slug=example'
+    })
+
+});
+</script>
+
+{% endblock %}
+
+{% block javascript %}
+<script type='text/javascript' src="{% static 'js/fullcalendar.min.js' %}"></script>
 {% endblock %}
