--- a/app/templates/registration/registration_form.html
+++ b/app/templates/registration/registration_form.html
@@ -1,11 +1,50 @@
 {% extends "base.html" %}
 {% load i18n %}
 
-{% block content %}
-<form method="post" action=".">
-  {% csrf_token %}
-  {{ form.as_p }}
-
-  <input type="submit" value="{% trans 'Submit' %}" />
-</form>
+{% block css %}
+{% load static %}
 {% endblock %}
+
+{% block content %}
+{% include "navbar.html" %}
+
+<div class="container" style="width:500px">
+	<h3 style="margin-top:100px">Sign Up</h3> 
+	<hr>
+	<div class="login-form">
+
+		<form action="" method="post">
+			<div class="control-group span3" style="width:400px" >
+				<input type="text"  value="" placeholder="Enter your name" id="name" style="width:400px;padding-bottom:15px;margin-bottom:10px" >
+				<i class="input-icon fui-user" for="login-name"></i>
+			</div>
+
+			<div class="control-group span3" style="width:400px" >
+				<input type="text"  value="" placeholder="Your E-mail" id="email" style="width:400px;padding-bottom:15px;margin-bottom:10px" >
+				<i class="input-icon fui-mail" for="login-name"></i>
+			</div>
+
+			<div class="control-group span3" style="width:400px">
+				<input type="password" value="" placeholder="Password" id="pass" style="width:400px;padding-bottom:15px;margin-bottom:10px">
+				<i class="input-icon fui-lock" for="login-pass"></i>
+			</div>
+
+
+			<div class="control-group span3" style="width:400px">
+				<input type="password"  value="" placeholder="Confirm Password" id="login-pass" style="width:400px;padding-bottom:15px;margin-bottom:10px">
+				<i class="input-icon fui-lock" for="login-pass"></i>
+			</div>
+
+			<div style="text-align:center"> 
+				<a class="btn btn-hg btn-primary btn-wide" href="#">Sign Up</a>
+				<!--<a class="login-link" href="#">Lost your password ?</a> -->
+			</div>
+		</form>
+
+	</div><!-- /login-form -->
+
+</div> <!-- /container -->
+
+
+{% endblock %}
+
