fixing home.html

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -20,5 +20,6 @@ $(document).ready(function() {
 {% endblock %}
 
 {% block javascript %}
+{% load static %}
 <script type='text/javascript' src="{% static 'js/fullcalendar.min.js' %}"></script>
 {% endblock %}
